<resources>
    <string name="app_name">Midterm 07590622</string>
    <string name="LoginToFacebook">Login To Facebook</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Login_success">Welcome  Kantaporn</string>
    <string name="Login_failed">Invalid username or password</string>
    <string name="AddtoStory">Add to Story</string>
    <string name="ViewAs">View As</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="More">More</string>
    <string name="Goesto">Goes to</string>
    <string name="Livesin">Lives in</string>
    <string name="From">From</string>
</resources>
